# PortalPyRobot

./: .gitignore  README.md  SocketIoClient.py  cmd_manager.py  cmd_plantWatcher.txt  cmd_robotArm.txt  cmd_socket.py  cmd_socket.spec  command.txt  config_comport.txt  dxl_calibration.py  dxl_calibration.spec  dxl_calibration.txt  dxl_calibration_angle.txt  dxl_calibration_home.py  dxl_param.txt  dxl_robot_gv.py  init_profile.py  init_profile.spec  log_command copy.txt  log_command.txt  log_command_example.txt  output.txt  overmind.py  play_record.py  pyproject.toml  run_robot.py  run_robot.spec  scan_ports.py  scan_ports.spec  storm32-test-backup.py  test.py
old/: storm32.py
old/prototype/: test.py
prototype/: cmd_manager.py  cmd_manual.py  cmd_socket.py  command.txt  dxl_calibration.py  dxl_gv.py  dxl_robot.py  dxl_robot_gv.py  dynamixel_sync.py  init_profile.py  log_command.txt  note.txt  play_record.py  range_mapping.py  setup_dynamixel.py  webAPI_example.py
prototype/calibration/: dxl_arm.txt  dxl_gv.txt  dxl_param.txt
src/calibration/: dxl_arm.txt  dxl_param.txt
src/config/: Comport copy.txt  Comport.txt  SerialNumber.txt  ServiceProfile.txt
tests/protocol2_0/: bulk_read_write_test.py  read_write.py  sync_read_write_test_backup.py
