[tool.poetry]
name = "portal301robot"
version = "0.1.0"
description = ""
authors = ["joonhwa <pass2774@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.23.3"
python-socketio = {version = "4.6.1", extras = ["asyncio_client"]}
pyinstaller = "^5.7.0"
pyserial = "^3.5"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
